게임 결과 저장, 통계 API